deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookbackenddeployment1
  namespace: suk4
  labels:
    app: bookbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookbackend
  template:
    metadata:
      name: bookbackend
      labels:
        app: bookbackend
    spec:
      containers:
        - name: bookbackend
          image: bookbackendconcept:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
            - containerPort: 9090
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: bookdetails-service1
  namespace: suk4
spec:
  selector:
    app: bookbackend
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
